# edtwardy-bmc

./: Cargo.toml  LICENSE
librebmc/: Cargo.toml
librebmc/src/: main.rs  models.rs  object_store.rs  redfish.rs  service.rs
librebmc/src/models/: computer_system_collection.rs  service_root.rs
librebmc/src/redfish/: computer_system.rs  computer_system_collection.rs  service_root.rs
odata/: Cargo.toml
odata/src/: lib.rs
redfish/src/: lib.rs  server.rs
