[package]
name = "librebmc"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.4"
hyper = "0.14"
tokio = { version = "1.17", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
derive_builder = "0.11"
uuid = { version = "0.8", features = ["serde"] }
odata = { path = "../odata" }
